autapi/tests/snapshots/derive_to_schema__using-23.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<NullableField>>(json!({\"field\": null}))"
---
Ok(
    SerdeAdapter(
        NullableField {
            field: "",
        },
    ),
)
