autapi/tests/snapshots/derive_to_schema__using-24.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<NullableField>>(json!({\"field\": \"str\"}))"
---
Ok(
    SerdeAdapter(
        NullableField {
            field: "str",
        },
    ),
)
