autapi/tests/snapshots/derive_to_schema__using-25.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "SerdeAdapter(NullableField { field: String::from(\"str\") })"
---
{
  "field": "str"
}
