autapi/tests/snapshots/derive_to_schema__using-3.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "SerdeAdapter(UsingStruct { value: Nullable(None), })"
---
{}
