autapi/tests/snapshots/derive_to_schema__using-4.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<UsingStruct>>(json!({ \"value\": 42, }))"
---
Ok(
    SerdeAdapter(
        UsingStruct {
            value: Nullable(
                Some(
                    42,
                ),
            ),
        },
    ),
)
