autapi/tests/snapshots/derive_to_schema__using-5.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<UsingStruct>>(json!({}))"
---
Ok(
    SerdeAdapter(
        UsingStruct {
            value: Nullable(
                None,
            ),
        },
    ),
)
