autapi/tests/snapshots/derive_to_schema__using-6.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "UsingTupleStruct::schema(&mut Registry::default())"
---
{
  "type": "integer",
  "format": "int64",
  "description": "Optional integer."
}
