autapi/tests/snapshots/derive_to_schema__using-7.snap
---
source: autapi/tests/derive_to_schema.rs
expression: SerdeAdapter(UsingTupleStruct(Nullable(Some(42))))
---
42
