autapi/tests/snapshots/derive_to_schema__using-8.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<UsingTupleStruct>>(json!(42))"
---
Ok(
    SerdeAdapter(
        UsingTupleStruct(
            Nullable(
                Some(
                    42,
                ),
            ),
        ),
    ),
)
