autapi/tests/snapshots/derive_to_schema__using-9.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "UsingTupleStruct::deserialize_missing()"
---
Some(
    UsingTupleStruct(
        Nullable(
            None,
        ),
    ),
)
